made a few changes

--- a/LPB/index.html
+++ b/LPB/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="http://jcrop-cdn.tapmodo.com/v0.9.12/css/jquery.Jcrop.min.css" type="text/css" />
 
     <title>Lytjepole Beheer</title>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=AIzaSyCPsvj17OPeebnj42RuoGX4-CAVfWWS54Q"></script>
 
     <!--
     <script type="text/javascript">
